[project]
name = "delta_density"
version = "0.0.1"
authors = [
  { name="Jakub Plesnik", email="jakub.plesnik@gmail.com" },
]
description = "Implementation of delta-density equations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PlesnikJakub/delta-density"